force-app/main/default/objects/External_Reviewer__c/External_Reviewer__c.object-meta.xml
<CustomObject>
    <label>External Reviewer</label>
    <nameField>
        <label>External Reviewer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>