force-app/main/default/objects/External_Reviewer__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>