force-app/main/default/objects/External_Reviewer__c/fields/Current_Active_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Reviews__c</fullName>
    <label>Current Active Reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>