force-app/main/default/objects/External_Reviewer__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field is to store the permissions provided to the user.</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>