force-app/main/default/objects/External_Reviewer__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historic Preservation</fullName>
            </value>
            <value>
                <fullName>Economic Development</fullName>
            </value>
            <value>
                <fullName>Community Engagement</fullName>
            </value>
            <value>
                <fullName>Urban Planning</fullName>
            </value>
            <value>
                <fullName>Rural Development</fullName>
            </value>
            <value>
                <fullName>Fundraising &amp; Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>