force-app/main/default/objects/External_Reviewer__c/fields/Last_login_date_on_Submittable__c.field-meta.xml
<CustomField>
    <fullName>Last_login_date_on_Submittable__c</fullName>
    <label>Last login date on Submittable</label>
    <type>DateTime</type>
</CustomField>