force-app/main/default/objects/External_Reviewer__c/fields/Permission_Level__c.field-meta.xml
<CustomField>
    <fullName>Permission_Level__c</fullName>
    <label>Permission Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level1</fullName>
            </value>
            <value>
                <fullName>Level2</fullName>
            </value>
            <value>
                <fullName>Level3</fullName>
            </value>
            <value>
                <fullName>Level4</fullName>
            </value>
            <value>
                <fullName>Level5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>