force-app/main/default/objects/External_Reviewer__c/fields/Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Role_Id__c</fullName>
    <label>Role Id</label>
    <type>TextArea</type>
</CustomField>