force-app/main/default/objects/External_Reviewer__c/fields/Submittable_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_User_Id__c</fullName>
    <label>Submittable User Id</label>
    <type>TextArea</type>
</CustomField>