force-app/main/default/objects/External_Reviewer__c/fields/Workload_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Workload_Capacity__c</fullName>
    <label>Workload Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>